tests/NormalTests/paczka1/small_fuzzy/75487737.err
Error in line 2: hB0 S978 16,9
Error in line 5: kPVw82Kt S213 90,08
Error in line 1: kPVw82Kt S213 7,3
Error in line 9: D1ZutyCjUrp S213 55,3
Error in line 12: S281 S978 6,3
